# dose_rate_variation

./: README.md  README.txt
GroupKFold/: GroupKFold.py  README.md  date_2011-2017_landuse_geo_spatial_cv_folds_map.html  nogami_200_2011-2022_continuous_geo.csv  nogami_200_2011-2022_continuous_geo_spatial_cv_folds_map.html  nogami_200_2011-2022_onehot_geo_spatial_cv_folds_map.html
SHAP/: README.md  SHAP.py
SHAP/DataFile/: date_2011_2017_土地利用.csv  new_sourth_200_continuous.csv  new_sourth_200_onehot.csv
histogram/: README.md  hist_from_csv.py
mapping/: README.md  mapping.py  nogami_200_2011-2022_onehot_geo.csv  pit.html  ravine.html
mapview/: Bridson.cpp  CMakeLists.txt  CSVIO.cpp  Cloud.cpp  Cloud.h  Common.h  Config.h  Fiber.cpp  Fiber.h  Filter.cpp  Height.cpp  LandTile.h  Level.cpp  Level.h  Makefile  Map.cpp  Mesh.cpp  Polyline.cpp  README.md  Vars.h  main.cpp
mapview/configs/: date-R-value-dense.conf  date-R-value-sparse.conf  date-attenuation.conf  niida-attenuation.conf  nogami-R-value-dense.conf  nogami-R-value-sparse.conf  nogami-attenuation.conf
mapview/include/: Bridson.h  CSVIO.h  Delaunay.h  Fiber.h  Filter.h  Graph.h  Height.h  JCN.h  LandFlag.h  LandMap.h  LandPlot.h  LandType.h  Map.h  Mesh.h  Polyline.h
mapview/map/: Fukushima_border.dbf  Fukushima_border.shx  Fukushima_coastline.dbf  Fukushima_coastline.shp  Fukushima_coastline.shx  Gunma_border.dbf  Gunma_border.shp  Gunma_border.shx  Ibaraki_border.dbf  Ibaraki_border.shp  Ibaraki_border.shx  Ibaraki_coastline.dbf  Ibaraki_coastline.shp  Ibaraki_coastline.shx  Miyagi_border.dbf  Miyagi_border.shp  Miyagi_border.shx  N01_07L_07_Road.dbf  N01_07L_07_Road.shp  N01_07L_07_Road.shx  Tochigi_border.dbf  Tochigi_border.shp  Tochigi_border.shx  W05-07_07-g_RiverNode.dbf  W05-07_07-g_RiverNode.shp  W05-07_07-g_RiverNode.shx  W05-07_07-g_Stream.dbf  W05-07_07-g_Stream.shx
mapview/satellite/: LC_N36E139_50m.tif  LC_N36E140_50m.tif  LC_N37E139_50m.tif  LC_N37E140_50m.tif  LC_N37E141_50m.tif
mapview/src/: Graph.cpp  JCN.cpp  LandFlag.cpp  LandMap.cpp  LandPlot.cpp  LandTile.cpp
